correcting alignment

--- a/public/style.css
+++ b/public/style.css
@@ -61,16 +61,17 @@ header h1 {
   padding: 20px;
   text-align: center;
   pointer-events: none;
+  display: flex;
 }
 
 .term {
   background: #fff9c4;
   border-bottom: solid 5px #ffc107;
   border-radius: 15px;
-  display: inline-block;
   margin: 2rem 3rem;
   height: 250px;
   width: calc(100% / 4);
+  padding: 0 10px;
 }
 
 .emoji {
